# unredoable

./: .coveragerc  .gitignore  Makefile  README.md  codecov.yaml  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yaml
tests/: test_unredoable.py  test_unredoing.py
unredoable/: __init__.py  _unredoable.py  _unredoing.py
